<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="info_app_desc">A simple, rational music player for android.</string>
    <string name="lbl_indexer">Music loading</string>
    <string name="lbl_indexing">Loading music</string>
    <string name="lbl_no_music">No music available</string>
    <string name="lbl_observing">Monitoring music library</string>
    <string name="lbl_retry">Retry</string>
    <string name="lbl_songs">Songs</string>
    <string name="lbl_song">Song</string>
    <string name="lbl_all_songs">All songs</string>
    <string name="lbl_albums">Albums</string>
    <string name="lbl_album">Album</string>
    <string name="lbl_album_live">Live album</string>
    <string name="lbl_album_remix">Remix album</string>
    <string name="lbl_eps">EPs</string>
    <string name="lbl_ep">EP</string>
    <string name="lbl_ep_live">Live EP</string>
    <string name="lbl_ep_remix">Remix EP</string>
    <string name="lbl_singles">Singles</string>
    <string name="lbl_single">Single</string>
    <string name="lbl_single_live">Live single</string>
    <string name="lbl_single_remix">Remix single</string>
    <string name="lbl_compilations">Compilations</string>
    <string name="lbl_compilation">Compilation</string>
    <string name="lbl_compilation_live">Live compilation</string>
    <string name="lbl_compilation_remix">Remix compilation</string>
    <string name="lbl_soundtracks">Soundtracks</string>
    <string name="lbl_soundtrack">Soundtrack</string>
    <string name="lbl_mixtapes">Mixtapes</string>
    <string name="lbl_mixtape">Mixtape</string>
    <string name="lbl_demo">Demo</string>
    <string name="lbl_demos">Demos</string>
    <string name="lbl_mixes">DJ Mixes</string>
    <string name="lbl_mix">DJ Mix</string>
    <string name="lbl_live_group">Live</string>
    <string name="lbl_remix_group">Remixes</string>
    <string name="lbl_appears_on">Appears on</string>
    <string name="lbl_artist">Artist</string>
    <string name="lbl_artists">Artists</string>
    <string name="lbl_genre">Genre</string>
    <string name="lbl_genres">Genres</string>
    <string name="lbl_playlist">Playlist</string>
    <string name="lbl_playlists">Playlists</string>
    <string name="lbl_new_playlist">New playlist</string>
    <string name="lbl_empty_playlist">Empty playlist</string>
    <string name="lbl_imported_playlist">Imported playlist</string>
    <string name="lbl_import">Import</string>
    <string name="lbl_import_playlist">Import playlist</string>
    <string name="lbl_export">Export</string>
    <string name="lbl_export_playlist">Export playlist</string>
    <string name="lbl_rename">Rename</string>
    <string name="lbl_rename_playlist">Rename playlist</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_confirm_delete_playlist">Delete playlist?</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_filter">Filter</string>
    <string name="lbl_filter_all">All</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_duration">Duration</string>
    <string name="lbl_song_count">Song count</string>
    <string name="lbl_disc">Disc</string>
    <string name="lbl_track">Track</string>
    <string name="lbl_date_added">Date added</string>
    <string name="lbl_sort">Sort</string>
    <string name="lbl_sort_mode">Sort by</string>
    <string name="lbl_sort_direction">Direction</string>
    <string name="lbl_sort_asc">Ascending</string>
    <string name="lbl_sort_dsc">Descending</string>
    <string name="lbl_playback">Now playing</string>
    <string name="lbl_playing">Playing</string>
    <string name="lbl_equalizer">Equalizer</string>
    <string name="lbl_play">Play</string>
    <string name="lbl_shuffle">Shuffle</string>
    <string name="lbl_queue">Queue</string>
    <string name="lbl_play_next">Play next</string>
    <string name="lbl_queue_add">Add to queue</string>
    <string name="lbl_playlist_add">Add to playlist</string>
    <string name="lbl_artist_details">Go to artist</string>
    <string name="lbl_album_details">Go to album</string>
    <string name="lbl_song_detail">View properties</string>
    <string name="lbl_parent_detail">View</string>
    <string name="lbl_share">Share</string>
    <string name="lbl_props">Song properties</string>
    <string name="lbl_path">Path</string>
    <string name="lbl_format">Format</string>
    <string name="lbl_size">Size</string>
    <string name="lbl_bitrate">Bit rate</string>
    <string name="lbl_sample_rate">Sample rate</string>
    <string name="lbl_replaygain_track">ReplayGain track adjustment</string>
    <string name="lbl_replaygain_album">ReplayGain album adjustment</string>
    <string name="set_auto_detect_usb">Auto-detect USB</string>
    <string name="set_picker_unavailable_fallback">System picker unavailable. Use Auto-detect USB or enter a direct path?</string>
    <string name="set_select_source">Select music source</string>
    <string name="set_enter_path_manually">Enter path manually…</string>
    <string name="set_enter_path_hint">e.g. /storage/usbdisk0/Music or /storage/usbdisk1/Music</string>
    <string name="set_path_whitespace_invalid">Path has leading or trailing spaces. Please correct it and try again.</string>
    <string name="set_path_inaccessible">Path is not accessible or does not exist</string>
    <string name="set_path_unsafe">This path is protected or unsafe for TS18 direct file access</string>
    <string name="set_path_missing">Path does not exist or is not a folder</string>
    <string name="set_path_not_directory">The source path is not a folder</string>
    <string name="set_path_unreadable">Path exists but Auxio-TS cannot read it</string>
    <string name="set_path_permission_missing">Storage permission is required before this path can be used</string>
    <string name="set_path_root_unavailable">Root-assisted DirectFS is not available for this raw storage path</string>
    <string name="set_path_open_failed">The source path was found but could not be opened on this volume</string>
    <string name="lng_loading_music_library">Loading your music library…</string>
    <string name="lng_loading_cached_music_library">Loading your music library…</string>
    <string name="lng_music_source_needed">Choose where Auxio-TS should load your music from.</string>
    <string name="lng_cached_library_unavailable">Your music source is configured, but the cached library could not be loaded. Check the source or refresh when ready.</string>
    <string name="err_no_equalizer_app">No TS18 EQ/DSP or Android equalizer app is available</string>
    <string name="lbl_shuffle_shortcut_short">Shuffle</string>
    <string name="lbl_shuffle_shortcut_long">Shuffle all</string>
    <string name="lbl_start_playback">Start playback</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_reset">Reset</string>
    <string name="lbl_more">More</string>
    <string name="lbl_path_style">Path style</string>
    <string name="lbl_path_style_absolute">Absolute</string>
    <string name="lbl_path_style_relative">Relative</string>
    <string name="lbl_windows_paths">Use Windows-compatible paths</string>
    <string name="lbl_about">About</string>
    <string name="lbl_version">Version</string>
    <string name="lbl_code">Source code</string>
    <string name="lbl_wiki">Wiki</string>
    <string name="lbl_licenses">Licenses</string>
    <string name="lbl_library_counts">Library statistics</string>
    <string name="lbl_unknown">Unknown</string>
    <string name="lbl_selection">Selection</string>
    <string name="lbl_error_info">Error information</string>
    <string name="lbl_copied">Copied</string>
    <string name="lbl_recently_added">Recently added</string>
    <string name="msg_empty_recently_added">No recently added songs</string>
    <string name="lbl_decades">Decades</string>
    <string name="msg_empty_decade">No songs for this decade</string>
    <string name="msg_empty_favourites">Favourites playlist is empty, opening Playlists</string>
    <string name="lbl_decade_fmt">%1$ds</string>
    <string name="lbl_folders">Folders</string>
    <string name="lbl_favourites">Favourites</string>
    <string name="lbl_report">Report</string>
    <string name="lbl_author">Author</string>
    <string name="lbl_author_name">Alexander Capehart</string>
    <string name="lbl_feedback">Feedback</string>
    <string name="lbl_github">Make an issue on GitHub</string>
    <string name="lbl_email">Send an email</string>
    <string name="lbl_donate">Donate</string>
    <string name="lbl_supporters">Supporters</string>
    <string name="lng_widget">View and control music playback</string>
    <string name="lng_indexing">Loading your music library…</string>
    <string name="lng_observing">Monitoring your music library for changes…</string>
    <string name="lng_queue_added">Added to queue</string>
    <string name="lng_play_next">Song will play next</string>
    <string name="lng_playlist_created">Playlist created</string>
    <string name="lng_playlist_imported">Playlist imported</string>
    <string name="lng_playlist_renamed">Playlist renamed</string>
    <string name="lng_playlist_exported">Playlist exported</string>
    <string name="lng_playlist_deleted">Playlist deleted</string>
    <string name="set_root_title">Settings</string>
    <string name="set_ui">Appearance &amp; layout</string>
    <string name="set_ui_desc">Theme, colors, library layout, and Now Playing appearance</string>
    <string name="set_content">Library &amp; sources</string>
    <string name="set_content_desc">Music sources, scanning, metadata, and artwork</string>
    <string name="set_observing">Automatic reloading</string>
    <string name="set_observing_desc">Reload the music library whenever it changes (requires persistent notification)</string>
    <string name="set_separators">Multi-value separators</string>
    <string name="set_separators_desc">Configure characters that denote multiple tag values</string>
    <string name="set_intelligent_sorting">Intelligent sorting</string>
    <string name="set_intelligent_sorting_desc">Correctly sort names that begin with numbers or words like \"the\" (works best with english-language music)</string>
    <string name="set_hide_collaborators">Hide collaborators</string>
    <string name="set_hide_collaborators_desc">Only show artists that are directly credited on an album (works best on well-tagged libraries)</string>
    <string name="set_cover_mode">Album covers</string>
    <string name="set_audio">Playback &amp; audio</string>
    <string name="set_audio_desc">Startup playback, queue behavior, controls, and volume normalization</string>
    <string name="set_locations">Music sources</string>
    <string name="set_reindex">Refresh music</string>
    <string name="set_reindex_desc">Reload the music library, using cached tags when possible</string>
    <string name="set_rescan">Full rescan</string>
    <string name="set_rescan_desc">Clear the tag cache and fully reload the music library (slower, but more complete)</string>
    <string name="err_index_failed">Music loading failed</string>
    <string name="set_group_general">General</string>
    <string name="set_group_support">Support</string>
    <string name="set_about_auxio_ts">About Auxio-TS</string>
    <string name="set_about_auxio_ts_desc">Version, licenses, and project information</string>
    <string name="set_music_sources_summary">Review selected source and detailed source options</string>
    <string name="set_library_maintenance">Library maintenance</string>
    <string name="set_scanning">Scanning</string>
    <string name="set_metadata">Metadata</string>
    <string name="set_artwork_loading">Artwork loading</string>
</resources>