<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto" app:title="@string/set_content">
    <PreferenceCategory app:title="@string/set_locations">
        <org.oxycblt.auxio.settings.ui.WrappedDialogPreference app:key="@string/set_key_music_dirs" app:summary="@string/set_music_sources_summary" app:title="@string/set_locations" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/set_library_maintenance">
        <Preference app:key="@string/set_key_reindex" app:summary="@string/set_reindex_desc" app:title="@string/set_reindex" />
        <Preference app:key="@string/set_key_rescan" app:summary="@string/set_rescan_desc" app:title="@string/set_rescan" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/set_scanning">
        <SwitchPreferenceCompat app:defaultValue="false" app:key="@string/set_key_observing" app:summary="@string/set_observing_desc" app:title="@string/set_observing" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/set_metadata">
        <org.oxycblt.auxio.settings.ui.WrappedDialogPreference app:key="@string/set_key_separators" app:summary="@string/set_separators_desc" app:title="@string/set_separators" />
        <SwitchPreferenceCompat app:defaultValue="true" app:key="@string/set_key_auto_sort_names" app:summary="@string/set_intelligent_sorting_desc" app:title="@string/set_intelligent_sorting" />
        <SwitchPreferenceCompat app:defaultValue="false" app:key="@string/set_key_hide_collaborators" app:summary="@string/set_hide_collaborators_desc" app:title="@string/set_hide_collaborators" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/set_artwork_loading">
        <org.oxycblt.auxio.settings.ui.IntListPreference app:defaultValue="@integer/cover_mode_balanced" app:entries="@array/entries_cover_mode" app:entryValues="@array/values_cover_mode" app:key="@string/set_key_cover_mode" app:title="@string/set_cover_mode" />
    </PreferenceCategory>
</PreferenceScreen>
