<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/set_root_title">

    <PreferenceCategory app:title="@string/set_group_general">
        <Preference app:icon="@drawable/ic_accent_24" app:key="@string/set_key_ui" app:summary="@string/set_ui_desc" app:title="@string/set_ui" />
        <Preference app:icon="@drawable/ic_song_24" app:key="@string/set_key_music" app:summary="@string/set_content_desc" app:title="@string/set_content" />
        <Preference app:icon="@drawable/ic_play_24" app:key="@string/set_key_audio" app:summary="@string/set_audio_desc" app:title="@string/set_audio" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/set_group_support">
        <Preference app:key="@string/set_key_about" app:summary="@string/set_about_auxio_ts_desc" app:title="@string/set_about_auxio_ts" />
    </PreferenceCategory>
</PreferenceScreen>
