<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:transitionGroup="true">


    <org.oxycblt.auxio.ui.CoordinatorAppBarLayout
        android:id="@+id/home_appbar"
        style="@style/Widget.Auxio.AppBarLayout">

        <org.oxycblt.auxio.ui.MultiToolbar
            android:id="@+id/home_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <org.oxycblt.auxio.ui.AuxioToolbar
                android:id="@+id/home_normal_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways"
                app:menu="@menu/toolbar_home"
                app:title="@string/info_app_name" />

            <org.oxycblt.auxio.ui.AuxioToolbar
                android:id="@+id/home_selection_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:menu="@menu/toolbar_selection"
                app:navigationIcon="@drawable/ic_close_24" />

        </org.oxycblt.auxio.ui.MultiToolbar>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/home_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:tabContentStart="@dimen/spacing_medium"
            app:tabGravity="start"
            app:tabMode="scrollable" />

    </org.oxycblt.auxio.ui.CoordinatorAppBarLayout>


    <FrameLayout
        android:id="@+id/home_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:clipToPadding="false"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/home_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            tools:layout="@layout/fragment_home_list" />



        <com.google.android.material.card.MaterialCardView
            android:id="@+id/home_indexing_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:layout_margin="@dimen/spacing_medium"
            android:transitionGroup="true"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.google.android.material.progressindicator.CircularProgressIndicator
                        android:id="@+id/home_indexing_progress"
                        android:layout_width="@dimen/size_touchable_small"
                        android:layout_height="@dimen/size_touchable_small"
                        android:layout_marginEnd="@dimen/spacing_small" />

                    <ImageView
                        android:id="@+id/home_indexing_error"
                        android:layout_width="@dimen/size_touchable_small"
                        android:layout_height="@dimen/size_touchable_small"
                        android:layout_marginEnd="@dimen/spacing_small"
                        android:contentDescription="@string/err_index_failed"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_feature_request_24"
                        app:tint="?attr/colorError"
                        tools:visibility="invisible" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/home_indexing_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_indexing"
                            android:textAppearance="?attr/textAppearanceTitleSmall" />

                        <TextView
                            android:id="@+id/home_indexing_summary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_tiny"
                            android:text="@string/lng_loading_music_library"
                            android:textAppearance="?attr/textAppearanceBodyMedium" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/home_indexing_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:maxLines="5"
                    android:textAppearance="?attr/textAppearanceBodySmall"
                    tools:text="Direct filesystem • generation 4 • /storage/emulated/0/Music&#10;1,090 found • 824 loaded • 801 evaluated • 2m 16s elapsed" />

                <LinearLayout
                    android:id="@+id/home_indexing_actions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/home_indexing_retry"
                        style="@style/Widget.Auxio.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_retry" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/home_indexing_cancel"
                        style="@style/Widget.Auxio.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_cancel" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </FrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
